Moved mouse code from GfxApplication to InputDevice/Mouse to make possible the use of another device as pointer.
Created the image component. Need to create an Image object to encapsulate all the information related an image file data

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,7 @@ WManager.sln
 WManager.zip
 WManager.vcxproj
 WManager.vcxproj.filters
+AWTino.sln
+AWTino.vcxproj
+AWTino.vcxproj.filters
+ClassDiagram.cd
